--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "blueimp-md5": "^2.10.0",
     "buefy": "^0.7.0",
+    "element-ui": "^2.4.11",
     "firebase": "^5.5.8",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
@@ -29,7 +31,10 @@
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-element": "^1.0.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
